--- a/scripts/deno.json
+++ b/scripts/deno.json
@@ -1,1 +1,20 @@
-{}
+{
+	"fmt": {
+		"useTabs": true,
+		"lineWidth": 80,
+		"indentWidth": 4,
+		"semiColons": false,
+		"singleQuote": true
+	},
+	"lint": {
+		"rules": {
+			"tags": [
+				"fresh",
+				"recommended"
+			]
+		}
+	},
+	"imports": {
+		"$std/": "https://deno.land/std@0.201.0/"
+	}
+}
